Add initial README and update project metadata
Introduced a comprehensive README describing the Decentrifi project, including its purpose, architecture, and setup instructions. Updated `pom.xml` metadata to reflect the new project name and description.

--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,8 @@
     <artifactId>decentrifi-parent</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>Parent >> Fluistr</name>
-    <description>Fluistr parent</description>
+    <name>decentrifi-parent</name>
+    <description>Decentrifi parent project for smart contract analytics</description>
 
     <modules>
         <module>data-ingestion</module>
