Add ABI parsing functionality and simplify ingestion logic
Introduced ABI parsing for better handling of smart contract functions and events, detailed in the README. Simplified function input processing by removing hardcoded mappings and unused `functionName`, making the ingestion process more modular and maintainable. Updated database and configuration to reflect new naming conventions.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_USER: analytics
-      POSTGRES_PASSWORD: analytics
-      POSTGRES_DB: analytics
+      POSTGRES_USER: decentrifi
+      POSTGRES_PASSWORD: decentrifi
+      POSTGRES_DB: decentrifi
     volumes:
       - postgres-data:/var/lib/postgresql/data
 
