--- a/data-ingestion/src/main/resources/application.conf
+++ b/data-ingestion/src/main/resources/application.conf
@@ -6,9 +6,9 @@ server {
 database {
     jdbcUrl = "jdbc:postgresql://localhost:5432/decentrifi"
     jdbcUrl = ${?DB_JDBC_URL}
-    username = "postgres"
+    username = "decentrifi"
     username = ${?DB_USERNAME}
-    password = "postgres"
+    password = "decentrifi"
     password = ${?DB_PASSWORD}
     maxPoolSize = 10
     maxPoolSize = ${?DB_MAX_POOL_SIZE}
