--- a/.github/workflows/kubernetes-deploy.yml
+++ b/.github/workflows/kubernetes-deploy.yml
@@ -4,6 +4,7 @@ env:
   REGISTRY: ghcr.io
   JAVA_VERSION: '21'
   JAVA_DISTRIBUTION: 'temurin'
+  IMAGE_NAME: ${{ github.repository }}
 
 on:
   workflow_dispatch:
@@ -42,17 +43,35 @@ jobs:
       - name: Build with Maven
         run: mvn -B package -DskipTests=true --no-transfer-progress
 
-      - name: Log into registry ghcr
-        uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      
+      - name: Log into registry 
+        uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-
-      - name: Build and publish the Docker image
-        run: |
-          sh ci/deploy/${{ github.event.inputs.application_to_deploy }}.sh
+      - name: Extract Docker metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/${{ github.event.inputs.application_to_deploy }}
+          tags: |
+            type=sha,format=long
+            type=raw,value=latest
+      
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ${{ github.event.inputs.application_to_deploy }}/Dockerfile
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Set up kubectl
         uses: azure/setup-kubectl@v3
