Add Maven Assembly Plugin for creating executable JARs
Integrated the Maven Assembly Plugin to package the application as a single JAR with dependencies. Configured it to include the main class and produce a finalized JAR named "app" during the package phase. This enables easier distribution and execution of the application.

--- a/data-ingestion/pom.xml
+++ b/data-ingestion/pom.xml
@@ -186,6 +186,32 @@
                     <jvmTarget>21</jvmTarget>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.7.0</version>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <archive>
+                                <manifest>
+                                    <mainClass>fi.decentri.dataingest.ApplicationKt</mainClass>
+                                </manifest>
+                            </archive>
+                            <descriptorRefs>
+                                <descriptorRef>jar-with-dependencies</descriptorRef>
+                            </descriptorRefs>
+                            <finalName>app</finalName>
+                            <appendAssemblyId>false</appendAssemblyId>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 </project>
