Update namespace in Kubernetes deployment workflow
Changed the namespace from 'fluistr' to 'decentrifi' in the GitHub Actions workflow for Kubernetes deployments. This ensures the deployment script targets the correct environment.

--- a/.github/workflows/kubernetes-deploy.yml
+++ b/.github/workflows/kubernetes-deploy.yml
@@ -86,4 +86,4 @@ jobs:
 
       - name: Restart deployment
         run: |
-          kubectl rollout restart deployment/${{ github.event.inputs.application_to_deploy }} -n fluistr
+          kubectl rollout restart deployment/${{ github.event.inputs.application_to_deploy }} -n decentrifi
