Add Kubernetes deployment restart to CI workflow
This update sets up `kubectl` and configures the Kubernetes context in the build workflow. It ensures the landing page deployment is restarted automatically after changes, improving the deployment process.

--- a/.github/workflows/build-landing-page.yml
+++ b/.github/workflows/build-landing-page.yml
@@ -48,3 +48,18 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
+      - name: Set up kubectl
+        uses: azure/setup-kubectl@v3
+        with:
+          version: 'latest'
+
+      - name: Kubernetes context
+        uses: Azure/k8s-set-context@v1
+        with:
+          method: kubeconfig
+          kubeconfig: ${{ secrets.K8S_CONFIG }}
+
+      - name: Restart deployment
+        run: |
+          kubectl rollout restart deployment/landing-page-html -n decentrifi
