Modularize database functionality into a separate `db` module.
Extracted shared database logic, configuration, and initialization into a new `db` module to enhance reusability and maintainability. Updated the `data-ingestion` and `data-api` modules to depend on the `db` module and removed duplicate database-related code.

--- a/.gitignore
+++ b/.gitignore
@@ -17,9 +17,11 @@ docker_data/
 
 terraform.tfvars
 terraform.tfstate
+
 terraform.tfstate.backup
 .terraform/
 .terraform.lock.hcl
+.terraform.tfstate*
 logs/
 kubeconfig.yaml
 
