Refactor RawInvocations and enhance block ingestion logic
Moved `RawInvocations` table definition to the `db` module for better separation of concerns. Introduced `BlockService` to estimate and fetch blocks close to specific timestamps, improving the ingestion process. Updated dependencies and streamlined related repository implementations.

--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
             <version>${kotlin.version}</version>
         </dependency>
         <dependency>
+            <groupId>io.insert-koin</groupId>
+            <artifactId>koin-ktor</artifactId>
+            <version>4.0.4</version>
+        </dependency>
+        <dependency>
             <groupId>com.logtail</groupId>
             <artifactId>logback-logtail</artifactId>
             <version>${logback-logtail.version}</version>
