Add Cache4k dependencies and update Web3j version
Introduced Cache4k and Cache4k-jvm dependencies for caching needs in the data ingestion module. Updated Web3j version to 4.14.0 for improved Ethereum integration and removed redundant dependencies for a cleaner configuration.

--- a/data-ingestion/pom.xml
+++ b/data-ingestion/pom.xml
@@ -59,6 +59,16 @@
             <artifactId>ktor-client-content-negotiation-jvm</artifactId>
             <version>${ktor.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.github.reactivecircus.cache4k</groupId>
+            <artifactId>cache4k</artifactId>
+            <version>${cache4k.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.reactivecircus.cache4k</groupId>
+            <artifactId>cache4k-jvm</artifactId>
+            <version>${cache4k.version}</version>
+        </dependency>
         
         <!-- Web3j for Ethereum integration -->
         <dependency>
