Add Helm chart for data ingestion microservice
Introduced deployment, service, and namespace templates to support the new data ingestion microservice. Updated values.yml with configurable options and secrets for database connections. Enhanced Chart.yml to reflect the multi-microservice architecture.

--- a/infra/helm/Chart.yml
+++ b/infra/helm/Chart.yml
@@ -1,6 +1,8 @@
 apiVersion: v2
 name: decentrifi
-description: A Helm chart for deploying Decentrifi
+description: A Helm chart for deploying Decentrifi microservices
 type: application
 version: 0.1.0
 appVersion: "1.0.0"
+maintainers:
+  - name: Decentrifi Team
