--- a/infra/helm/values.yml
+++ b/infra/helm/values.yml
@@ -1,10 +1,39 @@
-image:
-  repository: ghcr.io/qkyrie/your-image
-  tag: latest
-  pullPolicy: IfNotPresent
+# Default values for decentrifi
 
-replicaCount: 1
+data_ingestion:
+  enabled: true
+  name: data-ingestion
+  replicaCount: 1
+  image:
+    repository: ghcr.io/qkyrie/decentrifi
+    name: data-ingestion
+    tag: latest
+    pullPolicy: Always
+  containerPort: 8080
+  resources:
+    limits:
+      cpu: 0.5
+      memory: 512Mi
+    requests:
+      cpu: 0.2
+      memory: 256Mi
+  env:
+    - name: KTOR_ENV
+      value: production
+    - name: DB_JDBC_URL
+      valueFrom:
+        secretKeyRef:
+          name: decentrifi-secrets
+          key: postgres-url
+    - name: DB_USERNAME
+      valueFrom:
+        secretKeyRef:
+          name: decentrifi-secrets
+          key: postgres-username
+    - name: DB_PASSWORD
+      valueFrom:
+        secretKeyRef:
+          name: decentrifi-secrets
+          key: postgres-password
 
-service:
-  type: ClusterIP
-  port: 80
+namespace: decentrifi
