--- a/data-ingestion/Dockerfile
+++ b/data-ingestion/Dockerfile
@@ -1,30 +1,28 @@
 FROM maven:3.9.6-amazoncorretto-21 AS build
-
 WORKDIR /app
 
-# Copy the parent POM
-COPY pom.xml /app/
-COPY data-ingestion/pom.xml /app/data-ingestion/
-COPY db/pom.xml /app/db/
+# copy the aggregator pom + module poms
+COPY pom.xml ./
+COPY data-ingestion/pom.xml data-ingestion/
+COPY data-api/pom.xml data-api/
+COPY db/pom.xml db/
 
-# Download dependencies (this layer will be cached)
-RUN mvn dependency:go-offline -B -f data-ingestion/pom.xml
+# fetch all *remote* deps for data-ingestion AND the modules it depends on (db, data-api)
+RUN mvn dependency:go-offline -B \
+    -pl data-ingestion -am \
+    -f pom.xml
 
-# Copy source files
-COPY data-ingestion/src /app/data-ingestion/src
-COPY db/src /app/db/src
+# now bring in your source
+COPY . .
 
-# Build the application
-RUN mvn clean package -DskipTests -f data-ingestion/pom.xml
+# build data-ingestion AND its reactor dependencies (db, data-api)
+RUN mvn clean package -DskipTests -B \
+    -pl data-ingestion -am \
+    -f pom.xml
 
-# Runtime stage
+# --- runtime stage unchanged ---
 FROM amazoncorretto:21-alpine
-
 WORKDIR /app
-
-# Copy the built application
 COPY --from=build /app/data-ingestion/target/app.jar /app/app.jar
 COPY data-ingestion/src/main/resources/application.conf /app/application.conf
-
-# Run the application
-CMD ["java", "-jar", "/app/app.jar"]
+CMD ["java","-jar","/app/app.jar"]
