Add 'data-api' option to Kubernetes deploy workflow
Updated the GitHub Actions workflow to include 'data-api' as a deployable application option. This enables deployments and restarts for the new application alongside 'data-ingestion'.

--- a/.github/workflows/kubernetes-deploy.yml
+++ b/.github/workflows/kubernetes-deploy.yml
@@ -11,7 +11,7 @@ on:
     inputs:
       application_to_deploy:
         type: choice
-        options: ['data-ingestion']
+        options: ['data-ingestion', 'data-api']
         description: 'What to restart'
         required: true
         default: 'data-ingestion'
