Optimize event ingestion and enhance UI metrics.
Replaced synchronous calls with async/await, added parallel processing using `parMap`, and introduced batch log processing to improve event ingestion performance. Updated UI with a stacked bar chart for events by type and hour, fetching real-time data via the API.

--- a/data-ingestion/src/main/resources/application.conf
+++ b/data-ingestion/src/main/resources/application.conf
@@ -30,7 +30,10 @@ ethereum {
     # Number of blocks to process in one batch
     batchSize = 5000
     batchSize = ${?ETH_BATCH_SIZE}
-    
+
+    eventBatchSize = 2000
+    eventBatchSize = ${?ETH_EVENT_BATCH_SIZE}
+
     # Polling interval in milliseconds
     pollingInterval = 15000
     pollingInterval = ${?ETH_POLLING_INTERVAL}
