--- a/data-api/pom.xml
+++ b/data-api/pom.xml
@@ -31,6 +31,13 @@
             <artifactId>db</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/io.fabric8/kubernetes-client -->
+        <dependency>
+            <groupId>io.fabric8</groupId>
+            <artifactId>kubernetes-client</artifactId>
+            <version>7.2.0</version>
+        </dependency>
         
         <!-- Ktor -->
         <dependency>
