--- a/data-ingestion/pom.xml
+++ b/data-ingestion/pom.xml
@@ -22,6 +22,12 @@
             <artifactId>db</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <!-- Command Line Parsing -->
+        <dependency>
+            <groupId>com.github.ajalt.clikt</groupId>
+            <artifactId>clikt-jvm</artifactId>
+            <version>4.2.1</version>
+        </dependency>
         <dependency>
             <groupId>io.ktor</groupId>
             <artifactId>ktor-client-core-jvm</artifactId>
