Add manual contract ingestion mode and CLI argument parsing
Introduced support for manually triggering ingestion by specific contract and network. Enhanced CLI to handle `--mode`, `--contract`, and `--network` parameters, defaulting to auto mode when no arguments are provided. Updated Dockerfile and infrastructure to align with these changes, and added API endpoints for manual contract ingestion.

--- a/data-ingestion/Dockerfile
+++ b/data-ingestion/Dockerfile
@@ -25,4 +25,8 @@ FROM amazoncorretto:21-alpine
 WORKDIR /app
 COPY --from=build /app/data-ingestion/target/app.jar /app/app.jar
 COPY data-ingestion/src/main/resources/application.conf /app/application.conf
-CMD ["java","-jar","/app/app.jar"]
+# Use ENTRYPOINT for the fixed part and CMD for the default arguments
+# This allows kubernetes to override just the CMD part with its own arguments
+ENTRYPOINT ["java", "-jar", "/app/app.jar"]
+# Default to auto mode if no arguments are provided
+CMD ["--mode=auto"]
