--- a/data-ingestion/src/main/resources/application.conf
+++ b/data-ingestion/src/main/resources/application.conf
@@ -14,29 +14,49 @@ database {
     maxPoolSize = ${?DB_MAX_POOL_SIZE}
 }
 
-ethereum {
-    # Ethereum Mainnet RPC endpoint
-    rpcUrl = "https://mainnet.infura.io/v3/YOUR_INFURA_KEY"
-    rpcUrl = ${?ETH_RPC_URL}
+# Multi-network configuration
+networks {
+    # Ethereum Mainnet
+    ethereum {
+        rpcUrl = "https://mainnet.infura.io/v3/YOUR_INFURA_KEY"
+        rpcUrl = ${?ETH_RPC_URL}
+        
+        startBlock = 22389515
+        startBlock = ${?ETH_START_BLOCK}
+        
+        # Ingestion settings
+        batchSize = 1000
+        batchSize = ${?ETH_BATCH_SIZE}
+        eventBatchSize = 2000
+        eventBatchSize = ${?ETH_EVENT_BATCH_SIZE}
+        pollingInterval = 15000
+        pollingInterval = ${?ETH_POLLING_INTERVAL}
+        
+        # Network characteristics
+        blockTime = 12  # Average block time in seconds
+    }
     
-    # DAI token contract address on Ethereum Mainnet
-    contractAddress = "0x6b175474e89094c44da98b954eedeac495271d0f"
-    contractAddress = ${?ETH_CONTRACT_ADDRESS}
+    # Add other networks as needed - examples:
     
-    # Block to start ingestion from (set to 0 to use the value from DB)
-    startBlock =  22389515
-    startBlock = ${?ETH_START_BLOCK}
+    # Polygon Mainnet
+    # polygon {
+    #     rpcUrl = "https://polygon-rpc.com"
+    #     rpcUrl = ${?POLYGON_RPC_URL}
+    #     batchSize = 500
+    #     eventBatchSize = 1000
+    #     pollingInterval = 5000
+    #     blockTime = 2  # Average block time in seconds
+    # }
     
-    # Number of blocks to process in one batch
-    batchSize = 1000
-    batchSize = ${?ETH_BATCH_SIZE}
-
-    eventBatchSize = 2000
-    eventBatchSize = ${?ETH_EVENT_BATCH_SIZE}
-
-    # Polling interval in milliseconds
-    pollingInterval = 15000
-    pollingInterval = ${?ETH_POLLING_INTERVAL}
+    # Arbitrum One
+    # arbitrum {
+    #     rpcUrl = "https://arb1.arbitrum.io/rpc"
+    #     rpcUrl = ${?ARBITRUM_RPC_URL}
+    #     batchSize = 1000
+    #     eventBatchSize = 2000
+    #     pollingInterval = 10000
+    #     blockTime = 0.25  # Arbitrum can process multiple blocks per second
+    # }
 }
 
 ktor {
