Refactor web3 functionality and remove legacy Web3j usage
Migrated to a new `web3` module with updated classes for blockchain interactions, including support for balance queries, token flows, and asset transfers. Removed legacy `data-ingestion/WEB3J_MANAGER.md`, streamlined APIs, and added utilities like `AsyncUtils` for improved coroutine handling.

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>data-ingestion</module>
         <module>data-api</module>
         <module>db</module>
+        <module>web3</module>
     </modules>
 
 
