--- a/data-ingestion/pom.xml
+++ b/data-ingestion/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>db</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>fi.decentri</groupId>
+            <artifactId>web3</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <!-- Command Line Parsing -->
         <dependency>
             <groupId>com.github.ajalt.clikt</groupId>
@@ -54,13 +59,7 @@
             <version>${cache4k.version}</version>
         </dependency>
         
-        <!-- Web3j for Ethereum integration -->
-        <dependency>
-            <groupId>org.web3j</groupId>
-            <artifactId>core</artifactId>
-            <version>${web3j.version}</version>
-        </dependency>
-        
+
         <!-- Kotlin Coroutines -->
         <dependency>
             <groupId>org.jetbrains.kotlinx</groupId>
