Add chainlayer module to project configuration
This commit updates the pom.xml file to include the chainlayer module in the project's configuration. This ensures that the module is recognized and built as part of the overall project structure.

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>data-api</module>
         <module>db</module>
         <module>web3</module>
+        <module>chainlayer</module>
     </modules>
 
 
