Add missing module dependencies to Dockerfile
Included `web3/pom.xml` and `chainlayer/pom.xml` in the Dockerfile to ensure all necessary modules are available during the build. This fixes potential build issues caused by missing dependency files.

--- a/data-api/Dockerfile
+++ b/data-api/Dockerfile
@@ -5,6 +5,8 @@ WORKDIR /app
 COPY pom.xml ./
 COPY data-ingestion/pom.xml data-ingestion/
 COPY data-api/pom.xml data-api/
+COPY web3/pom.xml web3/
+COPY chainlayer/pom.xml chainlayer/
 COPY db/pom.xml db/
 
 # fetch all *remote* deps for data-api AND the modules it depends on (db, data-api)
