--- a/chainlayer/src/main/resources/application.properties
+++ b/chainlayer/src/main/resources/application.properties
@@ -1,17 +1,4 @@
-management.endpoints.web.exposure.include=health,info,prometheus
+management.endpoints.web.exposure.include=health,info
 spring.threads.virtual.enabled=true
 
-# Chain configurations
-fi.decentri.chains.chains.ethereum.endpoint=https://ethereum-mainnet.infura.io/v3/${INFURA_API_KEY:your-infura-api-key}
-fi.decentri.chains.chains.ethereum.enabled=true
-
-# Base network configuration
-fi.decentri.chains.chains.base.endpoint=https://mainnet.base.org
-fi.decentri.chains.chains.base.enabled=true
-
-# Example of a disabled chain
-fi.decentri.chains.chains.polygon.endpoint=https://polygon-rpc.com
-fi.decentri.chains.chains.polygon.enabled=false
-
-# Legacy config (kept for backward compatibility)
-fi.decentri.base.endpoint.url=https://mainnet.base.org
+fi.decentri.web3.chains.ethereum.endpoint=${ETH_RPC_URL}
