Add job-based ingestion mode and event progress tracking
Introduces 'job' mode with scheduler and processor services for task-based ingestion. Updates multiple ingestion use cases to support optional block overrides and progress listeners. Refactors dependencies and test setup for JUnit 5 compatibility while maintaining support for legacy JUnit 4.

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.3.10</version>
+        <version>3.4.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -26,6 +26,8 @@
         <module>db</module>
         <module>web3</module>
         <module>chainlayer</module>
+        <!-- Temporarily disabled as it's new and not fully implemented yet -->
+        <!-- <module>token-api</module> -->
     </modules>
 
 
